--- a/TimeNETOptimizationEnvironment/src/toe/optimization/OptimizerPreferences.form
+++ b/TimeNETOptimizationEnvironment/src/toe/optimization/OptimizerPreferences.form
@@ -204,12 +204,22 @@
           </Layout>
           <SubComponents>
             <Component class="javax.swing.JSpinner" name="jSpinnerWrongSolutionsPerDirectionUntilBreak">
+              <Properties>
+                <Property name="model" type="javax.swing.SpinnerModel" editor="org.netbeans.modules.form.editors2.SpinnerModelEditor">
+                  <SpinnerModel initial="1" minimum="1" numberType="java.lang.Integer" stepSize="1" type="number"/>
+                </Property>
+              </Properties>
               <Events>
                 <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="jSpinnerWrongSolutionsPerDirectionUntilBreakStateChanged"/>
                 <EventHandler event="vetoableChange" listener="java.beans.VetoableChangeListener" parameters="java.beans.PropertyChangeEvent" handler="jSpinnerWrongSolutionsPerDirectionUntilBreakVetoableChange"/>
               </Events>
             </Component>
             <Component class="javax.swing.JSpinner" name="jSpinnerWrongSolutionsUntilBreak">
+              <Properties>
+                <Property name="model" type="javax.swing.SpinnerModel" editor="org.netbeans.modules.form.editors2.SpinnerModelEditor">
+                  <SpinnerModel initial="2" minimum="1" numberType="java.lang.Integer" stepSize="1" type="number"/>
+                </Property>
+              </Properties>
               <Events>
                 <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="jSpinnerWrongSolutionsUntilBreakStateChanged"/>
                 <EventHandler event="vetoableChange" listener="java.beans.VetoableChangeListener" parameters="java.beans.PropertyChangeEvent" handler="jSpinnerWrongSolutionsUntilBreakVetoableChange"/>
@@ -1016,10 +1026,12 @@
                           <Component id="jLabel30" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jCheckBoxGeneticMutateTopSolution" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jSpinnerGeneticMaxNumberOfCrossings" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jLabel31" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="jCheckBoxGeneticMutateTopSolution" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="jSpinnerGeneticMaxNumberOfCrossings" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                       <EmptySpace pref="260" max="32767" attributes="0"/>
                   </Group>
