--- a/TimeNETOptimizationEnvironment/src/toe/MeasurementForm.form
+++ b/TimeNETOptimizationEnvironment/src/toe/MeasurementForm.form
@@ -54,9 +54,8 @@
     <Component class="javax.swing.JComboBox" name="jComboBoxMeasurementName">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="2">
-            <StringItem index="0" value="Measurement1"/>
-            <StringItem index="1" value="Measurement 2"/>
+          <StringArray count="1">
+            <StringItem index="0" value="No Measure available!"/>
           </StringArray>
         </Property>
         <Property name="toolTipText" type="java.lang.String" value="Chose Measurement to optimize"/>
